<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <Button
        android:textSize="20sp"
        android:layout_margin="10sp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/create_button"
        android:text="@string/create_button"/>

    <Button
        android:textSize="20sp"
        android:layout_margin="10sp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_button"
        android:text="@string/edit_button"/>

    <Button
        android:textSize="20sp"
        android:layout_margin="10sp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/delete_button"
        android:text="@string/delete_button"/>

    <Button
        android:textSize="20sp"
        android:layout_margin="10sp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/display_button"
        android:text="@string/display_button"/>

    <Button
        android:textSize="20sp"
        android:layout_margin="10sp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/finish_button"
        android:text="@string/finish_button"/>

</LinearLayout>
